# pail

./: .gitignore  LICENSE  README.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
examples/: primitives.py  producer.py  retries.py  worker_once.py  worker_service.py
src/pail/: __init__.py  codec.py  core.py  heartbeat.py  models.py  protocols.py  store.py
tests/: conftest.py  fakes.py  test_core.py  test_heartbeat.py  test_models.py  test_store.py
