[project]
name = "pail"
version = "0.0.1"
description = "Durable queues on S3, brokerless & observable by default."
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["boto3==1.43.24", "pydantic==2.13.4"]

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
