[project]
name = "pailq"
version = "0.1.0"
description = "Durable queues on S3, brokerless & observable by default."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3==1.43.24",
    "python-ulid==3.1.0",
    "typing-extensions==4.15.0",
]

[dependency-groups]
dev = ["pytest==9.0.3"]

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "pail"
